Fix Routing & Add Trial Navigation bar 4 routing

--- a/Frontend/Webanwendungarbeitszeit/src/app/app.component.html
+++ b/Frontend/Webanwendungarbeitszeit/src/app/app.component.html
@@ -84,7 +84,14 @@
     }
   </style>
   
-  
+  <nav>
+    <ul>
+      <li><h2><a href="">Home</a></h2></li>
+      <li><h2><a href="/anzeige">Anzeige</a></h2></li>
+      <li><h2><a href="/eingabe">Eingabe</a></h2></li>
+    </ul>
+  </nav>
+
   <div class="container">
     <!-- Logo -->
     <div class="logo">ATIW Berufskolleg</div>
