Change Website concept

--- a/Frontend/Webanwendungarbeitszeit/src/app/app.component.html
+++ b/Frontend/Webanwendungarbeitszeit/src/app/app.component.html
@@ -88,7 +88,6 @@
     <ul>
       <li><h2><a href="">Home</a></h2></li>
       <li><h2><a href="/anzeige">Anzeige</a></h2></li>
-      <li><h2><a href="/eingabe">Eingabe</a></h2></li>
     </ul>
   </nav>
 
@@ -106,3 +105,4 @@
         <button type="submit">Login</button>
     </form>
   </div>
+  <script src="script.js"></script>
