--- a/Frontend/Webanwendungarbeitszeit/src/app/app.component.html
+++ b/Frontend/Webanwendungarbeitszeit/src/app/app.component.html
@@ -1,20 +1,19 @@
-  <div class="container">
-    <!-- Logo -->
-    <div class="logo">ATIW Berufskolleg</div>
+  <div class="container" id="container">
+      <!-- Logo -->
+      <div class="logo">ATIW Berufskolleg</div>
   
-    <!-- Title -->
-    <div class="title">Arbeitszeiterfassung</div>
-  
+      <!-- Title -->
+      <div class="title">Arbeitszeiterfassung</div>
+      
     <!-- Login Form -->
-    <form class="login-form">
+    <form class="login-form" id="login-form">
         <input type="username" placeholder="Username" required>
         <input type="password" placeholder="Password" required>
-        <button type="submit">Login</button>
+        <button type="submit" id="submit">Login</button>
     </form>
   </div>
 
-  <div class="hidden">
+  <div class="hidden" id="content">
     <p>Spiele Fortnite jeden Tag</p>
   </div>  
-  
   <script src="script.js"></script>
