Button geht immernoch nicht

--- a/Frontend/Webanwendungarbeitszeit/src/app/app.component.html
+++ b/Frontend/Webanwendungarbeitszeit/src/app/app.component.html
@@ -1,4 +1,4 @@
-  <div class="container" id="container">
+  <div class="container" id="login-container">
       <!-- Logo -->
       <div class="logo">ATIW Berufskolleg</div>
   
@@ -14,6 +14,6 @@
   </div>
 
   <div class="hidden" id="content">
-    <p>Spiele Fortnite jeden Tag</p>
-  </div>  
-  <script src="script.js"></script>
+    <p>Das Skript hat geklappt</p>
+  </div>
+  <script src = "script.js"> </script>
