--- a/Frontend/Webanwendungarbeitszeit/src/app/app.component.html
+++ b/Frontend/Webanwendungarbeitszeit/src/app/app.component.html
@@ -7,13 +7,14 @@
       
     <!-- Login Form -->
     <form class="login-form" id="login-form">
-        <input type="username" placeholder="Username" required>
-        <input type="password" placeholder="Password" required>
-        <button type="submit" id="submit">Login</button>
+        <input id="username" type="username" placeholder="Username" required>
+        <input id="password" type="password" placeholder="Password" required>
+        <button type="submit">Login</button>
     </form>
   </div>
 
   <div class="hidden" id="content">
     <p>Das Skript hat geklappt</p>
   </div>
-  <script src = "script.js"> </script>
+
+  <script src="script.js"></script>
