--- a/Frontend/Webanwendungarbeitszeit/src/app/eingabe/eingabe.component.html
+++ b/Frontend/Webanwendungarbeitszeit/src/app/eingabe/eingabe.component.html
@@ -1,35 +1,44 @@
-
-    <div class="container">
-        <div class="form-section">
-            <!-- Arbeitszeiteintragung -->
-            <div class="form-box">
-                <h3>Arbeitszeiteintragung</h3>
-                <label for="arbeitszeit-von">Von:</label>
-                <input type="date" id="arbeitszeit-von">
-                <label for="arbeitszeit-bis">Bis:</label>
-                <input type="date" id="arbeitszeit-bis">
-                <button>Speichern</button>
-            </div>
-
-            <!-- Fehlzeiteintragung -->
-            <div class="form-box">
-                <h3>Fehlzeiteintragung</h3>
-                <label for="fehlzeit-von">Von:</label>
-                <input type="date" id="fehlzeit-von">
-                <label for="fehlzeit-bis">Bis:</label>
-                <input type="date" id="fehlzeit-bis">
-                <label for="fehlzeit-art">Art der Fehlzeit:</label>
-                <select id="fehlzeit-art">
-                    <option value="urlaub">Urlaub</option>
-                    <option value="ferien">Ferien/Feiertag</option>
-                    <option value="krankheit">Krankheit</option>
-                </select>
-                <button>Speichern</button>
-            </div>
+<div class="container">
+    <div class="form-section">
+        <!-- Arbeitszeiteintragung -->
+        <div class="form-box">
+            <h3>Arbeitszeiteintragung</h3>
+            <label for="arbeitszeit-von">Von:</label>
+            <input type="date" id="arbeitszeit-von">
+            <label for="arbeitszeit-von-zeit">Uhrzeit:</label>
+            <input type="time" id="arbeitszeit-von-zeit">
+            
+            <label for="arbeitszeit-bis">Bis:</label>
+            <input type="date" id="arbeitszeit-bis">
+            <label for="arbeitszeit-bis-zeit">Uhrzeit:</label>
+            <input type="time" id="arbeitszeit-bis-zeit">
+            
+            <button>Speichern</button>
         </div>
 
-        <!-- Anzeigen-Button -->
-        <button class="display-btn">Anzeigen</button>
+        <!-- Fehlzeiteintragung -->
+        <div class="form-box">
+            <h3>Fehlzeiteintragung</h3>
+            <label for="fehlzeit-von">Von:</label>
+            <input type="date" id="fehlzeit-von">
+            <label for="fehlzeit-von-zeit">Uhrzeit:</label>
+            <input type="time" id="fehlzeit-von-zeit">
+            
+            <label for="fehlzeit-bis">Bis:</label>
+            <input type="date" id="fehlzeit-bis">
+            <label for="fehlzeit-bis-zeit">Uhrzeit:</label>
+            <input type="time" id="fehlzeit-bis-zeit">
+            
+            <label for="fehlzeit-art">Art der Fehlzeit:</label>
+            <select id="fehlzeit-art">
+                <option value="urlaub">Urlaub</option>
+                <option value="ferien">Ferien/Feiertag</option>
+                <option value="krankheit">Krankheit</option>
+            </select>
+            <button>Speichern</button>
+        </div>
     </div>
 
-
+    <!-- Anzeigen-Button -->
+    <button class="display-btn">Anzeigen</button>
+</div>
