Constanten in Funktionen

--- a/Frontend/Webanwendungarbeitszeit/src/app/eingabe/eingabe.component.html
+++ b/Frontend/Webanwendungarbeitszeit/src/app/eingabe/eingabe.component.html
@@ -4,14 +4,12 @@
         <div class="form-box">
             <h3>Arbeitszeiteintragung</h3>
             <label for="arbeitszeit-von">Von:</label>
-            <input type="date" id="arbeitszeit-von">
+            <input type="date" id="start_date">
             <label for="arbeitszeit-von-zeit">Uhrzeit:</label>
-            <input type="time" id="arbeitszeit-von-zeit">
+            <input type="time" id="start_time">
             
-            <label for="arbeitszeit-bis">Bis:</label>
-            <input type="date" id="arbeitszeit-bis">
             <label for="arbeitszeit-bis-zeit">Uhrzeit:</label>
-            <input type="time" id="arbeitszeit-bis-zeit">
+            <input type="time" id="end_time">
             
             <button>Speichern</button>
         </div>
@@ -20,17 +18,15 @@
         <div class="form-box">
             <h3>Fehlzeiteintragung</h3>
             <label for="fehlzeit-von">Von:</label>
-            <input type="date" id="fehlzeit-von">
+            <input type="date" id="start_date">
             <label for="fehlzeit-von-zeit">Uhrzeit:</label>
-            <input type="time" id="fehlzeit-von-zeit">
+            <input type="time" id="start_time">
             
-            <label for="fehlzeit-bis">Bis:</label>
-            <input type="date" id="fehlzeit-bis">
             <label for="fehlzeit-bis-zeit">Uhrzeit:</label>
-            <input type="time" id="fehlzeit-bis-zeit">
+            <input type="time" id="end_time">
             
             <label for="fehlzeit-art">Art der Fehlzeit:</label>
-            <select id="fehlzeit-art">
+            <select id="description">
                 <option value="urlaub">Urlaub</option>
                 <option value="ferien">Ferien/Feiertag</option>
                 <option value="krankheit">Krankheit</option>
