--- a/Frontend/Webanwendungarbeitszeit/src/app/app.component.html
+++ b/Frontend/Webanwendungarbeitszeit/src/app/app.component.html
@@ -9,12 +9,6 @@
     <form class="login-form" id="login-form">
         <input id="username" type="username" placeholder="Username" required>
         <input id="password" type="password" placeholder="Password" required>
-        <button type="submit">Login</button>
+        <button type="button">Login</button>
     </form>
   </div>
-
-  <div class="hidden" id="content">
-    <p>Das Skript hat geklappt</p>
-  </div>
-
-  <script src="script.js"></script>
