--- a/Frontend/Webanwendungarbeitszeit/src/app/app.component.html
+++ b/Frontend/Webanwendungarbeitszeit/src/app/app.component.html
@@ -9,7 +9,7 @@
     <form class="login-form" id="login-form">
         <input id="username" type="username" placeholder="Username" required>
         <input id="password" type="password" placeholder="Password" required>
-        <button type="submit">Login</button>
+        <button type="submit" onclick="buttonDB()">Login</button>
     </form>
   </div>
 
