--- a/Frontend/Webanwendungarbeitszeit/src/app/eingabe/eingabe.component.html
+++ b/Frontend/Webanwendungarbeitszeit/src/app/eingabe/eingabe.component.html
@@ -2,7 +2,7 @@
     <div class="form-section">
         <!-- Arbeitszeiteintragung -->
         <div class="form-box">
-            <h3>Arbeitszeiteintragung</h3>
+            <h3><label id="type">Arbeitszeiteintragung</label></h3>
             <label for="arbeitszeit-von">Von:</label>
             <input type="date" id="start_date">
             <label for="arbeitszeit-von-zeit">Uhrzeit:</label>
@@ -16,7 +16,7 @@
 
         <!-- Fehlzeiteintragung -->
         <div class="form-box">
-            <h3>Fehlzeiteintragung</h3>
+            <h3><label id="type">Fehlzeiteintragung</label></h3>
             <label for="fehlzeit-von">Von:</label>
             <input type="date" id="start_date">
             <label for="fehlzeit-von-zeit">Uhrzeit:</label>
