--- a/Frontend/Webanwendungarbeitszeit/src/app/app.component.html
+++ b/Frontend/Webanwendungarbeitszeit/src/app/app.component.html
@@ -9,6 +9,12 @@
     <form class="login-form" id="login-form">
         <input id="username" type="username" placeholder="Username" required>
         <input id="password" type="password" placeholder="Password" required>
-        <button type="button">Login</button>
+        <button type="submit">Login</button>
     </form>
   </div>
+
+  <div class="hidden" id="content">
+    <p>|Hier würde die Eingabe Seite angezeigt werden|</p>
+  </div>
+
+  <script src="script.js"> </script>
